Weird Safari bug with `<button>`

--- a/src/buy.html
+++ b/src/buy.html
@@ -191,7 +191,7 @@ layout: default
       </fieldset>
     </section>
   </section>
-  <button class="buy__submit">{% include svg/checkmark.svg %} Pay Now</button>
+  <a class="buy__submit">{% include svg/checkmark.svg %} Pay Now</a>
   <section class="buy__footer type__align--center">
     <p class="type__align--legible"><small>By clicking "Pay Now" you agree with the <a href="#">Terms of Service</a></small></p>
   </section>
