Adjusted links in Header and Footer

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@ layout: default
     </article>
   </section>
   <footer>
-    <p>Questions? Check out the <a>FAQs</a>.</p>
+    <p>Questions? Check out the <a href="{{ site.baseurl }}/faqs">FAQs</a>.</p>
   </footer>
 </section>
 <section id="packages" class="color__bg--base-5">
