Update for remaining pages

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@ layout: default
 <section class="split color__bg--gradient color__type--white">
   <section class="wrapper">
     <figure class="split__img">
-      <img class="lazy" data-src="{{ site.baseurl }}/assets/img/family.jpg">
+      <img class="lazy" data-src="{{ site.baseurl }}/assets/img/family.jpg" alt="Family enjoying time together at the airport">
     </figure>
     <figcaption class="split__content">
       <h2 class="type__style--caps">Instant Coverage</h2>
@@ -23,17 +23,17 @@ layout: default
   <section class="features">
     <article class="feature__item">
       <h3 class="color__type--highlight">Simple</h3>
-      <figure class="feature__item--img"><img class="lazy" data-src="{{ site.baseurl }}/assets/img/simple.svg"></figure>
+      <figure class="feature__item--img"><img class="lazy" data-src="{{ site.baseurl }}/assets/img/simple.svg" alt="Illustration of bullseye"></figure>
       <p class="color__type--base-62">3 coverage options. We worked really hard to make this a no brainer.</p>
     </article>
     <article class="feature__item">
       <h3 class="color__type--highlight">Fast</h3>
-      <figure class="feature__item--img"><img class="lazy" data-src="{{ site.baseurl }}/assets/img/fast.svg"></figure>
+      <figure class="feature__item--img"><img class="lazy" data-src="{{ site.baseurl }}/assets/img/fast.svg" alt="Illustration of rocket shipt"></figure>
       <p class="color__type--base-62">0 pieces of paper to sign or fax…Duh. It’s {{ site.time | date: '%Y' }}, insurance should be click, click, done.</p>
     </article>
     <article class="feature__item">
       <h3 class="color__type--highlight">Secure</h3>
-      <figure class="feature__item--img"><img class="lazy" data-src="{{ site.baseurl }}/assets/img/secure.svg"></figure>
+      <figure class="feature__item--img"><img class="lazy" data-src="{{ site.baseurl }}/assets/img/secure.svg" alt="Illustration of vault"></figure>
       <p class="color__type--base-62">3 amazing partners. A Standard & Poor’s A+ rated insurance carrier for policies, Stripe for payments, and Amazon for hosting.</p>
     </article>
   </section>
