--- a/src/403.html
+++ b/src/403.html
@@ -1,9 +1,10 @@
 ---
 layout: default
+title: 'Error • 403'
 ---
 
 <article class="wrapper type__align--center">
   <h1>Error • 403</h1>
   <hr>
-  <p>This directory is forbidden. <a href="{{ site.baseurl }}/">Go home</a>.</p>
+  <p class="type__align--legible">This directory is forbidden. <a href="{{ site.baseurl }}/">Go home</a>.</p>
 </article>
