--- a/src/404.html
+++ b/src/404.html
@@ -1,9 +1,10 @@
 ---
 layout: default
+title: 'Error • 404'
 ---
 
 <article class="wrapper type__align--center">
   <h1>Error • 404</h1>
   <hr>
-  <p>Looks like the page you’re looking for is missing. <a href="{{ site.baseurl }}/">Go home</a>.</p>
+  <p class="type__align--legible">Looks like the page you’re looking for is missing. <a href="{{ site.baseurl }}/">Go home</a>.</p>
 </article>
