--- a/src/buy.html
+++ b/src/buy.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: 'Purchase Coverage'
 ---
 
 <form id="buy__form" class="wrapper buy" action="" method="post">
@@ -9,7 +10,7 @@ layout: default
   </nav>
   <section class="buy__content">
     <header class="buy__header">
-      <h3>My Details</h3>
+      <h3 class="color__type--base-50">My Details</h3>
       <a id="add__guests" class="is__action can__add">
         {% include svg/add.svg %}
         Add Guests*
@@ -47,7 +48,7 @@ layout: default
   </section>
   <section id="guests" class="buy__content  is__extra is__hidden">
     <header class="buy__header">
-      <h3>Guests</h3>
+      <h3 class="color__type--base-50">Guests</h3>
       <a class="can__remove">{% include svg/cancel.svg %}</a>
     </header>
     <section class="fieldset__group is__guest">
@@ -82,7 +83,7 @@ layout: default
   </section>
   <section id="flights" class="buy__content ">
     <header class="buy__header">
-      <h3>Flights</h3>
+      <h3 class="color__type--base-50">Flights</h3>
       <a id="add__flights" class="is__action can__add">
         {% include svg/add.svg %}
         Add Flights*
@@ -91,9 +92,12 @@ layout: default
     <section class="fieldset__group">
       <fieldset class="fieldset__group--item is__small">
         <label for="flight-name"><h5>Flight Name</h5></label>
-        <section class="fancy__field">
+        <section class="fancy__field has--info">
           <input name="flight-name" for="flight-name" type="text" placeholder="ex. AA1818" required>
           {% include svg/info-dark.svg %}
+          <section class="deets">
+            <small class="color__type--base-50">Get help using our <a href="{{ site.baseurl }}/airlines" target="_blank">airline lookup</a></small>
+          </section>
         </section>
       </fieldset>
       <fieldset class="fieldset__group--item is__small">
@@ -119,15 +123,18 @@ layout: default
   </section>
   <section id="additional-flights" class="buy__content is__extra  is__hidden">
     <header class="buy__header">
-      <h3>Additional Flights</h3>
+      <h3 class="color__type--base-50">Additional Flights</h3>
       <a class="can__remove">{% include svg/cancel.svg %}</a>
     </header>
     <section class="fieldset__group">
       <fieldset class="fieldset__group--item is__small">
         <label for="flight-name"><h5>Flight Name</h5></label>
-        <section class="fancy__field">
+        <section class="fancy__field has--info">
           <input name="flight-name" for="flight-name" type="text" placeholder="ex. AA1818">
           {% include svg/info-dark.svg %}
+          <section class="deets">
+            <small class="color__type--base-50">Get help using our <a href="{{ site.baseurl }}/airlines" target="_blank">airline lookup</a></small>
+          </section>
         </section>
       </fieldset>
       <fieldset class="fieldset__group--item is__small">
@@ -151,16 +158,13 @@ layout: default
       </fieldset>
     </section>
   </section>
-  <section class="buy__footer type__align--center">
-    <p class="type__align--legible"><small>All options with an asterick (*) will change the overall price of your coverage, see our <a href="#">FAQs</a> for more information on specific rates</small></p>
+  <section class="buy__footer type__align--center color__type--base-38">
+    <small class="type__align--legible">All options with an asterick (*) will change the overall price of your coverage, see our <a href="{{ site.baseurl }}/faqs">FAQs</a> for more information on specific rates</small>
   </section>
   <section class="buy__content">
     <header class="buy__header">
-      <h3>Payment</h3>
-      <a class="buy__price is__action">
-        $1.99
-        {% include svg/info-dark.svg %}
-      </a>
+      <h3 class="color__type--base-50">Payment</h3>
+      <section class="buy__price color__type--highlight">$1.99</section>
     </header>
     <section class="fieldset__group">
       <fieldset class="fieldset__group--item is__full">
@@ -184,15 +188,18 @@ layout: default
       </fieldset>
       <fieldset class="fieldset__group--item">
         <label for="broker-code"><h5>Broker Code</h5></label>
-        <section class="fancy__field">
+        <section class="fancy__field has--info">
           <input name="broker-code" for="broker-code" type="number" placeholder="ex. 123456">
           {% include svg/info-dark.svg %}
+          <section class="deets">
+            <small class="color__type--base-50">If you would like to credit a broker purchase for this policy enter their broker code</small>
+          </section>
         </section>
       </fieldset>
     </section>
   </section>
-  <a class="buy__submit">{% include svg/checkmark.svg %} Pay Now</a>
-  <section class="buy__footer type__align--center">
-    <p class="type__align--legible"><small>By clicking "Pay Now" you agree with the <a href="#">Terms of Service</a></small></p>
+  <input type="submit" value="Pay Now">
+  <section class="buy__footer type__align--center color__type--base-38">
+    <small class="type__align--legible">By clicking "Pay Now" you agree with the <a href="{{ site.baseurl }}/terms">Terms of Service</a></small>
   </section>
 </form>
